examples/qualification/executable_module_entry/negative_multi_hop_cycle_bare_import/src/b.sm
Import "c.sm"

fn score_b() -> i32 {
    return score_c();
}
